test/files/neg/func-max-args.check
func-max-args.scala:2: error: too many arguments for function: 26, allowed: 22
  val x: (a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z) => Int
         ^
one error found
